# gigtag

./: .codespellignore  .commitlintrc.json.license  .deny.toml  .gitignore  .justfile  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc.yaml  .rustfmt.toml  .yamlfmt  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: build-and-test.yaml  continuous-integration.yaml  pre-commit.yaml  security-audit.yaml  test.yaml
src/: docs.rs  facet.rs  label.rs  lib.rs  props.rs  tests.rs
src/facet/: mod.rs  tests.rs
