# SPDX-FileCopyrightText: The gigtag authors
# SPDX-License-Identifier: MPL-2.0

[package]
name = "gigtag"
description = "A lightweight, textual tagging system for DJs."
version = "0.1.9"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/uklotzde/gigtag"
keywords = ["music", "dj", "metadata", "tagging"]
categories = ["parser-implementations"]
edition = "2021"
include = ["README.md", "LICENSES/", "src/"]
rust-version = "1.74"

[dependencies]
anyhow = "1.0.79"
compact_str = "0.7.1"
itertools = "0.12.1"
percent-encoding = "2.3.1"
regex = "1.10.3"
time = { version = "0.3.31", features = ["formatting", "macros", "parsing"] }
thiserror = "1.0.56"
url = "2.5.0"

[features]
default = []

[lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unused = "warn"

[lints.clippy]
pedantic = "warn"
clone_on_ref_ptr = "warn"
missing_const_for_fn = "warn"
self_named_module_files = "warn"
